refactor + mongo connection flooding fix

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -4,3 +4,6 @@ collectionName=test
 
 defaultCopyLocation=d:\New
 copyLimit=20
+
+slack.webhook=/services/T4A7LQBNV/B5RFQ10E8/wEARpw4TIiBUIsVJl1BYPqqj
+slack.username=home
