--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger = DEBUG, FILE
 
 # Define the file appender
 log4j.appender.FILE=org.apache.log4j.FileAppender
-log4j.appender.FILE.File=d:/logs/log.out
+log4j.appender.FILE.File=d:/logs/torrentmanager.log
 
 log4j.appender.FILE.ImmediateFlush=true
 log4j.appender.FILE.Append=false
